police service and year fixed as best as possible, working on investigation final decision

--- a/requested_scripts/on_siu_2018_2023.ipynb
+++ b/requested_scripts/on_siu_2018_2023.ipynb
@@ -190,6 +190,31 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "969eb26b-9714-4579-89f1-d29157555614",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def find_investigation_section(soup):\n",
+    "    try:\n",
+    "        investigation_title = soup.find(\"h2\", string=\"The Investigation\")\n",
+    "\n",
+    "\n",
+    "        next_sibling = investigation_title.next_sibling\n",
+    "        notification = [next_sibling]\n",
+    "\n",
+    "        while next_sibling.next_sibling.name == \"div\":\n",
+    "            next_sibling = next_sibling.next_sibling\n",
+    "            notification.append(next_sibling)\n",
+    "\n",
+    "        #print(notification)\n",
+    "        return notification\n",
+    "    except:\n",
+    "        return \"Error finding Investigation Section\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "f7182c9e-dee3-401e-993b-e4382e9d0ed0",
    "metadata": {},
    "outputs": [
@@ -199,7 +224,7 @@
        "'On March 30, 2023, at 8:41 p.m., the '"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "d1c1d99c-7d98-400d-9c38-226abcb0b191",
    "metadata": {},
    "outputs": [
@@ -232,19 +257,22 @@
     }
    ],
    "source": [
-    "def find_year(text):\n",
-    "    match = re.search(r\"(20\\d{2})\", text)\n",
-    "    if match is not None:\n",
-    "        return match.group(1)\n",
+    "def find_year(soup):\n",
+    "    text = str(find_investigation_section(soup))\n",
+    "    if text != \"Error finding Investigation Section\":\n",
+    "        match = re.search(r\"(20\\d{2})\", text)\n",
+    "        if match is not None:\n",
+    "            return match.group(1)\n",
+    "    else:\n",
+    "        return text\n",
     "\n",
-    "\n",
-    "year = find_year(text)\n",
+    "year = find_year(soup)\n",
     "print(year)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "b9f1f23b-09c1-4e17-a067-e5382ef86c64",
    "metadata": {},
    "outputs": [],
@@ -310,20 +338,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "f0ff1637-8d2b-4d37-a215-b26a0e90678f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def find_police_service(text):\n",
-    "    for service_name in ontario_police_services:\n",
-    "        if service_name in text:\n",
-    "            return service_name"
+    "def find_police_service(soup):\n",
+    "    text = str(find_investigation_section(soup))\n",
+    "    if text != \"Error finding Investigation Section\":\n",
+    "        for service_name in ontario_police_services:\n",
+    "            if service_name in text:\n",
+    "                return service_name\n",
+    "    else:\n",
+    "        return text"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
+   "id": "0923444f-a8d9-4bef-9acd-7025a9a9f2d6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ontario Provincial Police\n"
+     ]
+    }
+   ],
+   "source": [
+    "police = find_police_service(soup)\n",
+    "print(police)\n",
+    "#print(text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "id": "e9532f53-65ff-4bd7-92bd-72703d5d55f5",
    "metadata": {},
    "outputs": [],
@@ -348,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "da4ec4f7-011e-43d1-af62-ee8e31a1a9c4",
    "metadata": {},
    "outputs": [],
@@ -382,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "58ccbfe8-052e-4def-981a-2c7ea86af903",
    "metadata": {},
    "outputs": [],
@@ -402,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "efa822f9-fed9-487f-9acb-ff268287b88a",
    "metadata": {},
    "outputs": [],
@@ -412,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "0bb23997-980e-4a7d-94cd-415dd4fbfaab",
    "metadata": {},
    "outputs": [],
@@ -481,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "8d560897-6f73-4913-88b5-5cdbb7717910",
    "metadata": {},
    "outputs": [
@@ -499,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "780a5c5e-46b7-44bc-a14a-54d361470b18",
    "metadata": {},
    "outputs": [],
@@ -510,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "id": "7db78201-90c1-41ec-ae93-75da1f8a01f2",
    "metadata": {},
    "outputs": [],
@@ -526,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "0f37f94e-fbc6-49bd-91d5-c4ef886513bc",
    "metadata": {},
    "outputs": [],
@@ -556,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "id": "2f9b10bf-4959-4f7e-a7e8-0105f626f192",
    "metadata": {},
    "outputs": [
@@ -566,7 +618,7 @@
        "'<aside style=\"margin-top:2em;\"></aside>'"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -578,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "id": "d875c987-be8d-4698-8dea-b9bf10dbf9a2",
    "metadata": {},
    "outputs": [],
@@ -589,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "id": "0285fe52-a442-4fac-96a8-8d35d32d2a63",
    "metadata": {},
    "outputs": [
@@ -597,7 +649,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 37%|██████████████████████████▏                                            | 257/697 [01:06<02:04,  3.53it/s]"
+      " 37%|██████████████████████████▏                                            | 257/697 [01:06<02:17,  3.20it/s]"
      ]
     },
     {
@@ -611,7 +663,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 67%|███████████████████████████████████████████████▎                       | 464/697 [02:00<01:17,  3.02it/s]"
+      " 67%|███████████████████████████████████████████████▎                       | 464/697 [01:57<00:55,  4.20it/s]"
      ]
     },
     {
@@ -625,7 +677,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 74%|████████████████████████████████████████████████████▊                  | 518/697 [02:12<00:36,  4.93it/s]"
+      " 74%|████████████████████████████████████████████████████▋                  | 517/697 [02:08<00:37,  4.77it/s]"
      ]
     },
     {
@@ -640,7 +692,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████████████████████████████████████| 697/697 [02:56<00:00,  3.94it/s]\n"
+      "100%|███████████████████████████████████████████████████████████████████████| 697/697 [02:53<00:00,  4.02it/s]\n"
      ]
     }
    ],
@@ -655,12 +707,9 @@
     "    soup = BeautifulSoup(html, \"html.parser\")\n",
     "    \n",
     "    province = \"Ontario\"\n",
-    "\n",
-    "    # a lot of the information we might be looking for can be found in section 3 of the report\n",
-    "    text = soup.find_all(\"h3\")[3].next_sibling.get_text()\n",
     "    \n",
-    "    year = find_year(text)\n",
-    "    police_service = find_police_service(text)\n",
+    "    year = find_year(soup)\n",
+    "    police_service = find_police_service(soup)\n",
     "    \n",
     "    civilian_consequences = find_civilian_consequences(soup)\n",
     "    \n",
@@ -676,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
    "id": "e3f8468c-d7b5-4f1a-908d-2fac1e8a4222",
    "metadata": {},
    "outputs": [
@@ -713,8 +762,8 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>Ontario Provincial Police</td>\n",
        "      <td>None</td>\n",
        "      <td>Ontario</td>\n",
        "      <td>He was taken to hospital with a fractured back...</td>\n",
@@ -723,8 +772,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>Kingston Police</td>\n",
        "      <td>Kingston</td>\n",
        "      <td>Ontario</td>\n",
        "      <td>The Complainant was transported to hospital in...</td>\n",
@@ -733,8 +782,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>London Police Service</td>\n",
        "      <td>London</td>\n",
        "      <td>Ontario</td>\n",
        "      <td>Following his arrest the Complainant was taken...</td>\n",
@@ -743,8 +792,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>Peel Regional Police</td>\n",
        "      <td>None</td>\n",
        "      <td>Ontario</td>\n",
        "      <td>His wife and son were fortunate to have escape...</td>\n",
@@ -753,8 +802,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>Niagara Regional Police Service</td>\n",
        "      <td>Niagara</td>\n",
        "      <td>Ontario</td>\n",
        "      <td>The Complainant was taken into custody and tra...</td>\n",
@@ -766,12 +815,12 @@
        "</div>"
       ],
       "text/plain": [
-       "   Year Police Service      City Province  \\\n",
-       "0  None           None      None  Ontario   \n",
-       "1  None           None  Kingston  Ontario   \n",
-       "2  None           None    London  Ontario   \n",
-       "3  None           None      None  Ontario   \n",
-       "4  None           None   Niagara  Ontario   \n",
+       "   Year                   Police Service      City Province  \\\n",
+       "0  2023        Ontario Provincial Police      None  Ontario   \n",
+       "1  2023                  Kingston Police  Kingston  Ontario   \n",
+       "2  2023            London Police Service    London  Ontario   \n",
+       "3  2023             Peel Regional Police      None  Ontario   \n",
+       "4  2023  Niagara Regional Police Service   Niagara  Ontario   \n",
        "\n",
        "                               Civilian Consequences  \\\n",
        "0  He was taken to hospital with a fractured back...   \n",
@@ -795,7 +844,7 @@
        "4  https://www.siu.on.ca/en/directors_report_deta...  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -806,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 28,
    "id": "9d48c903-6cf7-40e2-a2ed-478106d04a14",
    "metadata": {},
    "outputs": [],
