I think one issue with police service is that the list isn't comprehensive, might need to add some services to it

--- a/requested_scripts/on_siu_2018_2023.ipynb
+++ b/requested_scripts/on_siu_2018_2023.ipynb
@@ -291,6 +291,7 @@
     "    'Cobourg Police Service',\n",
     "    'Cornwall Police Service',\n",
     "    'Deep River Police Service',\n",
+    "    'Durham Regional Police Service',\n",
     "    'Dryden Police Service',\n",
     "    'Greater Sudbury Police Service',\n",
     "    'Guelph Police Service',\n",
