investigation outcome does not always work, but is better than what we had, might be that the keywords aren't varied enough. I will look into the ones that are wrong or missing and see what can be done to better it

--- a/requested_scripts/on_siu_2018_2023.ipynb
+++ b/requested_scripts/on_siu_2018_2023.ipynb
@@ -599,12 +599,28 @@
     "    if mandate is None:\n",
     "        return None\n",
     "    \n",
-    "    \n",
-    "    \n",
-    "    decision_paragraph = mandate.parent.contents[-4]\n",
+    "    decision_paragraph = mandate.parent.contents[-9]\n",
     "    decision_final_paragraph_text = get_inner_text(decision_paragraph)\n",
+    "    \n",
+    "    keywords = ['basis', 'reasonable grounds']\n",
+    "    \n",
+    "    decision = \"\"\n",
     "\n",
-    "    return decision_final_paragraph_text"
+    "    CLEANR = re.compile('<.*?>|&([a-z0-9]+|#[0-9]{1,6}|#x[0-9a-f]{1,6});')\n",
+    "    cleantext = re.sub(CLEANR, '', str(decision_final_paragraph_text))\n",
+    "    temp = cleantext.split('.')\n",
+    "    for i in temp:\n",
+    "        for j in keywords:\n",
+    "            if j in i:\n",
+    "                decision = i\n",
+    "\n",
+    "    if decision == \"\":\n",
+    "        decision = cleantext\n",
+    "\n",
+    "    decision=[i.strip(punctuation) for i in decision.split()]\n",
+    "    decision = \" \".join(decision)\n",
+    "\n",
+    "    return decision"
    ]
   },
   {
@@ -616,7 +632,7 @@
     {
      "data": {
       "text/plain": [
-       "'<aside style=\"margin-top:2em;\"></aside>'"
+       "'As such there is no basis for proceeding with criminal charges in this case'"
       ]
      },
      "execution_count": 21,
@@ -642,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 23,
    "id": "0285fe52-a442-4fac-96a8-8d35d32d2a63",
    "metadata": {},
    "outputs": [
@@ -650,7 +666,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 37%|██████████████████████████▏                                            | 257/697 [01:06<02:17,  3.20it/s]"
+      " 37%|██████████████████████████▏                                            | 257/697 [01:05<02:11,  3.34it/s]"
      ]
     },
     {
@@ -664,7 +680,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 67%|███████████████████████████████████████████████▎                       | 464/697 [01:57<00:55,  4.20it/s]"
+      " 67%|███████████████████████████████████████████████▎                       | 464/697 [01:56<00:56,  4.11it/s]"
      ]
     },
     {
@@ -678,7 +694,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 74%|████████████████████████████████████████████████████▋                  | 517/697 [02:08<00:37,  4.77it/s]"
+      " 74%|████████████████████████████████████████████████████▋                  | 517/697 [02:09<00:41,  4.32it/s]"
      ]
     },
     {
@@ -726,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 24,
    "id": "e3f8468c-d7b5-4f1a-908d-2fac1e8a4222",
    "metadata": {},
    "outputs": [
@@ -768,7 +784,7 @@
        "      <td>None</td>\n",
        "      <td>Ontario</td>\n",
        "      <td>He was taken to hospital with a fractured back...</td>\n",
-       "      <td>&lt;aside style=\"margin-top:2em;\"&gt;&lt;/aside&gt;</td>\n",
+       "      <td>As such there is no basis for proceeding with ...</td>\n",
        "      <td>https://www.siu.on.ca/en/directors_report_deta...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -778,7 +794,7 @@
        "      <td>Kingston</td>\n",
        "      <td>Ontario</td>\n",
        "      <td>The Complainant was transported to hospital in...</td>\n",
-       "      <td>&lt;aside style=\"margin-top:2em;\"&gt;&lt;/aside&gt;</td>\n",
+       "      <td>In the result as there are no reasonable groun...</td>\n",
        "      <td>https://www.siu.on.ca/en/directors_report_deta...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -788,7 +804,7 @@
        "      <td>London</td>\n",
        "      <td>Ontario</td>\n",
        "      <td>Following his arrest the Complainant was taken...</td>\n",
-       "      <td>&lt;aside style=\"margin-top:2em;\"&gt;&lt;/aside&gt;</td>\n",
+       "      <td>In the result whether or not the Complainant’s...</td>\n",
        "      <td>https://www.siu.on.ca/en/directors_report_deta...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -798,7 +814,7 @@
        "      <td>None</td>\n",
        "      <td>Ontario</td>\n",
        "      <td>His wife and son were fortunate to have escape...</td>\n",
-       "      <td>&lt;aside style=\"margin-top:2em;\"&gt;&lt;/aside&gt;</td>\n",
+       "      <td>Be that as it may as there are no reasonable g...</td>\n",
        "      <td>https://www.siu.on.ca/en/directors_report_deta...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -808,7 +824,7 @@
        "      <td>Niagara</td>\n",
        "      <td>Ontario</td>\n",
        "      <td>The Complainant was taken into custody and tra...</td>\n",
-       "      <td>&lt;aside style=\"margin-top:2em;\"&gt;&lt;/aside&gt;</td>\n",
+       "      <td>4 As such there is no basis for proceeding wit...</td>\n",
        "      <td>https://www.siu.on.ca/en/directors_report_deta...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -830,12 +846,12 @@
        "3  His wife and son were fortunate to have escape...   \n",
        "4  The Complainant was taken into custody and tra...   \n",
        "\n",
-       "              Investigation Final Decision  \\\n",
-       "0  <aside style=\"margin-top:2em;\"></aside>   \n",
-       "1  <aside style=\"margin-top:2em;\"></aside>   \n",
-       "2  <aside style=\"margin-top:2em;\"></aside>   \n",
-       "3  <aside style=\"margin-top:2em;\"></aside>   \n",
-       "4  <aside style=\"margin-top:2em;\"></aside>   \n",
+       "                        Investigation Final Decision  \\\n",
+       "0  As such there is no basis for proceeding with ...   \n",
+       "1  In the result as there are no reasonable groun...   \n",
+       "2  In the result whether or not the Complainant’s...   \n",
+       "3  Be that as it may as there are no reasonable g...   \n",
+       "4  4 As such there is no basis for proceeding wit...   \n",
        "\n",
        "                                                Link  \n",
        "0  https://www.siu.on.ca/en/directors_report_deta...  \n",
@@ -845,7 +861,7 @@
        "4  https://www.siu.on.ca/en/directors_report_deta...  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -856,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 25,
    "id": "9d48c903-6cf7-40e2-a2ed-478106d04a14",
    "metadata": {},
    "outputs": [],
