--- a/requested_scripts/on_siu_2018_2023.ipynb
+++ b/requested_scripts/on_siu_2018_2023.ipynb
@@ -172,7 +172,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<title>Special Investigations Unit -- Director's Report Details, Case Number: 23-PVI-099</title>\n"
+      "<title>Special Investigations Unit -- Director's Report Details, Case Number: 22-TCI-189</title>\n"
      ]
     }
    ],
@@ -180,7 +180,7 @@
     "# scrape the first directors report 23-PVI-099 \t\n",
     "\n",
     "hdr = {'User-Agent': 'Mozilla/5.0'}\n",
-    "req = Request(case_urls[0],headers=hdr)\n",
+    "req = Request(case_urls[43],headers=hdr)\n",
     "page = urlopen(req)\n",
     "html = page.read().decode(\"utf-8\")\n",
     "soup = BeautifulSoup(html, \"html.parser\")\n",
@@ -221,7 +221,7 @@
     {
      "data": {
       "text/plain": [
-       "'On March 30, 2023, at 8:41 p.m., the '"
+       "'On July 28, 2022, at 1:08 p.m., the Toronto Police Service ('"
       ]
      },
      "execution_count": 7,
@@ -252,7 +252,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023\n"
+      "2022\n"
      ]
     }
    ],
@@ -364,7 +364,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ontario Provincial Police\n"
+      "Toronto Police Service\n"
      ]
     }
    ],
@@ -458,7 +458,18 @@
    "execution_count": 15,
    "id": "efa822f9-fed9-487f-9acb-ff268287b88a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Brampton'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "find_city(soup)"
    ]
@@ -542,7 +553,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "He was taken to hospital with a fractured back and possibly other injuries\n"
+      "The Complainant was transported to hospital following his arrest and diagnosed with a right rib fracture\n"
      ]
     }
    ],
@@ -599,20 +610,23 @@
     "    if mandate is None:\n",
     "        return None\n",
     "    \n",
-    "    decision_paragraph = mandate.parent.contents[-9]\n",
-    "    decision_final_paragraph_text = get_inner_text(decision_paragraph)\n",
-    "    \n",
     "    keywords = ['basis', 'reasonable grounds']\n",
-    "    \n",
     "    decision = \"\"\n",
+    "    \n",
+    "    for i in mandate.parent.contents:\n",
+    "    \n",
+    "#     decision_paragraph = mandate.parent.contents[-9]\n",
+    "        decision_final_paragraph_text = get_inner_text(i)\n",
+    "    \n",
+    "        #print(decision_final_paragraph_text)\n",
     "\n",
-    "    CLEANR = re.compile('<.*?>|&([a-z0-9]+|#[0-9]{1,6}|#x[0-9a-f]{1,6});')\n",
-    "    cleantext = re.sub(CLEANR, '', str(decision_final_paragraph_text))\n",
-    "    temp = cleantext.split('.')\n",
-    "    for i in temp:\n",
-    "        for j in keywords:\n",
-    "            if j in i:\n",
-    "                decision = i\n",
+    "        CLEANR = re.compile('<.*?>|&([a-z0-9]+|#[0-9]{1,6}|#x[0-9a-f]{1,6});')\n",
+    "        cleantext = re.sub(CLEANR, '', str(decision_final_paragraph_text))\n",
+    "        temp = cleantext.split('.')\n",
+    "        for i in temp:\n",
+    "            for j in keywords:\n",
+    "                if j in i:\n",
+    "                    decision = i\n",
     "\n",
     "    if decision == \"\":\n",
     "        decision = cleantext\n",
@@ -632,7 +646,7 @@
     {
      "data": {
       "text/plain": [
-       "'As such there is no basis for proceeding with criminal charges in this case'"
+       "'As such there is no basis for proceeding with criminal charges'"
       ]
      },
      "execution_count": 21,
@@ -658,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "0285fe52-a442-4fac-96a8-8d35d32d2a63",
    "metadata": {},
    "outputs": [
@@ -666,7 +680,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 37%|██████████████████████████▏                                            | 257/697 [01:05<02:11,  3.34it/s]"
+      " 37%|██████████████████████████▏                                            | 257/697 [01:02<02:00,  3.66it/s]"
      ]
     },
     {
@@ -680,7 +694,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 67%|███████████████████████████████████████████████▎                       | 464/697 [01:56<00:56,  4.11it/s]"
+      " 67%|███████████████████████████████████████████████▎                       | 464/697 [01:52<00:59,  3.91it/s]"
      ]
     },
     {
@@ -694,22 +708,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 74%|████████████████████████████████████████████████████▋                  | 517/697 [02:09<00:41,  4.32it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<title>Special Investigations Unit -- Director's Report Details, Case Number: 18-OCI-342</title>\n",
-      "Issue with finding Incident Narrative\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|███████████████████████████████████████████████████████████████████████| 697/697 [02:53<00:00,  4.02it/s]\n"
+      " 67%|███████████████████████████████████████████████▋                       | 468/697 [01:53<00:52,  4.37it/s]"
      ]
     }
    ],
@@ -742,137 +741,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "e3f8468c-d7b5-4f1a-908d-2fac1e8a4222",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Year</th>\n",
-       "      <th>Police Service</th>\n",
-       "      <th>City</th>\n",
-       "      <th>Province</th>\n",
-       "      <th>Civilian Consequences</th>\n",
-       "      <th>Investigation Final Decision</th>\n",
-       "      <th>Link</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2023</td>\n",
-       "      <td>Ontario Provincial Police</td>\n",
-       "      <td>None</td>\n",
-       "      <td>Ontario</td>\n",
-       "      <td>He was taken to hospital with a fractured back...</td>\n",
-       "      <td>As such there is no basis for proceeding with ...</td>\n",
-       "      <td>https://www.siu.on.ca/en/directors_report_deta...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2023</td>\n",
-       "      <td>Kingston Police</td>\n",
-       "      <td>Kingston</td>\n",
-       "      <td>Ontario</td>\n",
-       "      <td>The Complainant was transported to hospital in...</td>\n",
-       "      <td>In the result as there are no reasonable groun...</td>\n",
-       "      <td>https://www.siu.on.ca/en/directors_report_deta...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2023</td>\n",
-       "      <td>London Police Service</td>\n",
-       "      <td>London</td>\n",
-       "      <td>Ontario</td>\n",
-       "      <td>Following his arrest the Complainant was taken...</td>\n",
-       "      <td>In the result whether or not the Complainant’s...</td>\n",
-       "      <td>https://www.siu.on.ca/en/directors_report_deta...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2023</td>\n",
-       "      <td>Peel Regional Police</td>\n",
-       "      <td>None</td>\n",
-       "      <td>Ontario</td>\n",
-       "      <td>His wife and son were fortunate to have escape...</td>\n",
-       "      <td>Be that as it may as there are no reasonable g...</td>\n",
-       "      <td>https://www.siu.on.ca/en/directors_report_deta...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2023</td>\n",
-       "      <td>Niagara Regional Police Service</td>\n",
-       "      <td>Niagara</td>\n",
-       "      <td>Ontario</td>\n",
-       "      <td>The Complainant was taken into custody and tra...</td>\n",
-       "      <td>4 As such there is no basis for proceeding wit...</td>\n",
-       "      <td>https://www.siu.on.ca/en/directors_report_deta...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Year                   Police Service      City Province  \\\n",
-       "0  2023        Ontario Provincial Police      None  Ontario   \n",
-       "1  2023                  Kingston Police  Kingston  Ontario   \n",
-       "2  2023            London Police Service    London  Ontario   \n",
-       "3  2023             Peel Regional Police      None  Ontario   \n",
-       "4  2023  Niagara Regional Police Service   Niagara  Ontario   \n",
-       "\n",
-       "                               Civilian Consequences  \\\n",
-       "0  He was taken to hospital with a fractured back...   \n",
-       "1  The Complainant was transported to hospital in...   \n",
-       "2  Following his arrest the Complainant was taken...   \n",
-       "3  His wife and son were fortunate to have escape...   \n",
-       "4  The Complainant was taken into custody and tra...   \n",
-       "\n",
-       "                        Investigation Final Decision  \\\n",
-       "0  As such there is no basis for proceeding with ...   \n",
-       "1  In the result as there are no reasonable groun...   \n",
-       "2  In the result whether or not the Complainant’s...   \n",
-       "3  Be that as it may as there are no reasonable g...   \n",
-       "4  4 As such there is no basis for proceeding wit...   \n",
-       "\n",
-       "                                                Link  \n",
-       "0  https://www.siu.on.ca/en/directors_report_deta...  \n",
-       "1  https://www.siu.on.ca/en/directors_report_deta...  \n",
-       "2  https://www.siu.on.ca/en/directors_report_deta...  \n",
-       "3  https://www.siu.on.ca/en/directors_report_deta...  \n",
-       "4  https://www.siu.on.ca/en/directors_report_deta...  "
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "results_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "9d48c903-6cf7-40e2-a2ed-478106d04a14",
    "metadata": {},
    "outputs": [],
