2018-2023 progress from my part

--- a/requested_scripts/on_siu_2005_2017.ipynb
+++ b/requested_scripts/on_siu_2005_2017.ipynb
@@ -445,14 +445,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 106,
    "id": "f0ff1637-8d2b-4d37-a215-b26a0e90678f",
    "metadata": {},
    "outputs": [],
    "source": [
     "def find_police_service(text):\n",
     "    for service_name in ontario_police_services:\n",
-    "        if service_name in notification_of_the_siu_text:\n",
+    "        if service_name in text:\n",
     "            return service_name"
    ]
   },
@@ -733,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 108,
    "id": "0285fe52-a442-4fac-96a8-8d35d32d2a63",
    "metadata": {},
    "outputs": [
@@ -741,7 +741,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 10/10 [00:04<00:00,  2.23it/s]\n"
+      "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 10/10 [00:02<00:00,  4.03it/s]\n"
      ]
     }
    ],
@@ -780,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 109,
    "id": "e3f8468c-d7b5-4f1a-908d-2fac1e8a4222",
    "metadata": {},
    "outputs": [
@@ -817,7 +817,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>2005</td>\n",
-       "      <td>Peterborough Police Service</td>\n",
+       "      <td>Toronto Police Service</td>\n",
        "      <td>Toronto</td>\n",
        "      <td>Ontario</td>\n",
        "      <td>There are no reasonable grounds to believe tha...</td>\n",
@@ -835,7 +835,7 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2010</td>\n",
-       "      <td>Peterborough Police Service</td>\n",
+       "      <td>Ontario Provincial Police</td>\n",
        "      <td>None</td>\n",
        "      <td>Ontario</td>\n",
        "      <td>In my view, there are no reasonable grounds to...</td>\n",
@@ -844,7 +844,7 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>2010</td>\n",
-       "      <td>Peterborough Police Service</td>\n",
+       "      <td>Brantford Police Service</td>\n",
        "      <td>Brantford</td>\n",
        "      <td>Ontario</td>\n",
        "      <td>In my view, there are no reasonable grounds to...</td>\n",
@@ -853,7 +853,7 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>2011</td>\n",
-       "      <td>Peterborough Police Service</td>\n",
+       "      <td>City of Kawartha Lakes Police Service</td>\n",
        "      <td>Armstrong</td>\n",
        "      <td>Ontario</td>\n",
        "      <td>In my view, there are no reasonable grounds to...</td>\n",
@@ -862,7 +862,7 @@
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>2009</td>\n",
-       "      <td>Peterborough Police Service</td>\n",
+       "      <td>Toronto Police Service</td>\n",
        "      <td>Toronto</td>\n",
        "      <td>Ontario</td>\n",
        "      <td>In my view, there are no reasonable grounds to...</td>\n",
@@ -871,7 +871,7 @@
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>2013</td>\n",
-       "      <td>Peterborough Police Service</td>\n",
+       "      <td>Ontario Provincial Police</td>\n",
        "      <td>None</td>\n",
        "      <td>Ontario</td>\n",
        "      <td>The investigation by this Unit has been comple...</td>\n",
@@ -880,7 +880,7 @@
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>2015</td>\n",
-       "      <td>Peterborough Police Service</td>\n",
+       "      <td>Toronto Police Service</td>\n",
        "      <td>St. Joseph</td>\n",
        "      <td>Ontario</td>\n",
        "      <td>None</td>\n",
@@ -889,7 +889,7 @@
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>2010</td>\n",
-       "      <td>Peterborough Police Service</td>\n",
+       "      <td>Ottawa Police Service</td>\n",
        "      <td>Ottawa</td>\n",
        "      <td>Ontario</td>\n",
        "      <td>None</td>\n",
@@ -898,7 +898,7 @@
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>2013</td>\n",
-       "      <td>Peterborough Police Service</td>\n",
+       "      <td>Toronto Police Service</td>\n",
        "      <td>Toronto</td>\n",
        "      <td>Ontario</td>\n",
        "      <td>In my view, there are no reasonable grounds to...</td>\n",
@@ -909,17 +909,17 @@
        "</div>"
       ],
       "text/plain": [
-       "   Year               Police Service          City Province  \\\n",
-       "0  2005  Peterborough Police Service       Toronto  Ontario   \n",
-       "1  2015  Peterborough Police Service  Peterborough  Ontario   \n",
-       "2  2010  Peterborough Police Service          None  Ontario   \n",
-       "3  2010  Peterborough Police Service     Brantford  Ontario   \n",
-       "4  2011  Peterborough Police Service     Armstrong  Ontario   \n",
-       "5  2009  Peterborough Police Service       Toronto  Ontario   \n",
-       "6  2013  Peterborough Police Service          None  Ontario   \n",
-       "7  2015  Peterborough Police Service    St. Joseph  Ontario   \n",
-       "8  2010  Peterborough Police Service        Ottawa  Ontario   \n",
-       "9  2013  Peterborough Police Service       Toronto  Ontario   \n",
+       "   Year                         Police Service          City Province  \\\n",
+       "0  2005                 Toronto Police Service       Toronto  Ontario   \n",
+       "1  2015            Peterborough Police Service  Peterborough  Ontario   \n",
+       "2  2010              Ontario Provincial Police          None  Ontario   \n",
+       "3  2010               Brantford Police Service     Brantford  Ontario   \n",
+       "4  2011  City of Kawartha Lakes Police Service     Armstrong  Ontario   \n",
+       "5  2009                 Toronto Police Service       Toronto  Ontario   \n",
+       "6  2013              Ontario Provincial Police          None  Ontario   \n",
+       "7  2015                 Toronto Police Service    St. Joseph  Ontario   \n",
+       "8  2010                  Ottawa Police Service        Ottawa  Ontario   \n",
+       "9  2013                 Toronto Police Service       Toronto  Ontario   \n",
        "\n",
        "                        Investigation Final Decision  \\\n",
        "0  There are no reasonable grounds to believe tha...   \n",
@@ -946,7 +946,7 @@
        "9  https://www.ontario.ca/page/siu-directors-repo...  "
       ]
      },
-     "execution_count": 103,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -957,7 +957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 110,
    "id": "9d48c903-6cf7-40e2-a2ed-478106d04a14",
    "metadata": {},
    "outputs": [],
