fixing the keywords report inclusion

--- a/requested_scripts/siu0517_keyword_reports.ipynb
+++ b/requested_scripts/siu0517_keyword_reports.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "13c5e56f-558a-44ea-becb-51f151cb4783",
    "metadata": {},
    "outputs": [
@@ -124,7 +124,7 @@
        "4                                 2006-07-24  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "7b2f7f2a-b8d6-45dd-bcd2-9483befd6b1f",
    "metadata": {},
    "outputs": [
@@ -147,7 +147,7 @@
        "79"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "9ce92b4a-dbd1-4897-be55-32b5e8f54684",
    "metadata": {},
    "outputs": [],
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "cfd8d41a-4bd7-41bd-99bf-0aeda77b186f",
    "metadata": {},
    "outputs": [],
@@ -196,7 +196,7 @@
     "    # find if the page contains any of the keywords\n",
     "    contains_words = False\n",
     "    keywords = [\"Firearm injuries\", \"Custody injuries\", \"Other injuries/deaths\", \"Vehicle injuries\", \"Use of force\", \n",
-    "                \"Unlawful or unnecessary exercise of authority Unnecessary force\", \"Unnecessary use of force\",\n",
+    "                \"Unlawful or unnecessary exercise of authority\", \"Unnecessary force\", \"Unnecessary use of force\",\n",
     "                \"Assault\", \"Sexual assault\", \"Harm\", \"Excessive force\", \"Injury\"]\n",
     "\n",
     "    for i in keywords:\n",
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "68c0e3f5-4ef3-481f-8730-740724618426",
    "metadata": {},
    "outputs": [
@@ -257,7 +257,7 @@
        "74                                 2013-07-29  >"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "f4c84b12-fe01-43c9-8153-76864d3ad2ee",
    "metadata": {},
    "outputs": [
@@ -278,7 +278,7 @@
        "10"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "id": "7ec838e0-b08b-4be8-ba72-5852568e5c2b",
    "metadata": {},
    "outputs": [],
@@ -322,7 +322,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
