--- a/requested_scripts/siu1718_keyword_reports.ipynb
+++ b/requested_scripts/siu1718_keyword_reports.ipynb
@@ -196,7 +196,7 @@
     "    # find if the page contains any of the keywords\n",
     "    contains_words = False\n",
     "    keywords = [\"Firearm injuries\", \"Custody injuries\", \"Other injuries/deaths\", \"Vehicle injuries\", \"Use of force\", \n",
-    "                \"Unlawful or unnecessary exercise of authority Unnecessary force\", \"Unnecessary use of force\",\n",
+    "                \"Unlawful or unnecessary exercise of authority\", \"Unnecessary force\", \"Unnecessary use of force\",\n",
     "                \"Assault\", \"Sexual assault\", \"Harm\", \"Excessive force\", \"Injury\"]\n",
     "\n",
     "    for i in keywords:\n",
