--- a/requested_scripts/siu1823_keyword_reports.ipynb
+++ b/requested_scripts/siu1823_keyword_reports.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "864dbb16-5476-451e-aa7c-2f325b2d135d",
    "metadata": {},
    "outputs": [
@@ -123,7 +123,7 @@
        "4  https://www.siu.on.ca/en/directors_report_deta...  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "51326c9b-ab63-4be0-9d89-dad0a0e77f71",
    "metadata": {},
    "outputs": [
@@ -146,7 +146,7 @@
        "1108"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "6b13356d-3b80-42b6-949c-ed92698f899c",
    "metadata": {},
    "outputs": [],
@@ -177,7 +177,7 @@
     "    # find if the page contains any of the keywords\n",
     "    contains_words = False\n",
     "    keywords = [\"Firearm injuries\", \"Custody injuries\", \"Other injuries/deaths\", \"Vehicle injuries\", \"Use of force\", \n",
-    "                \"Unlawful or unnecessary exercise of authority Unnecessary force\", \"Unnecessary use of force\",\n",
+    "                \"Unlawful or unnecessary exercise of authority\", \"Unnecessary force\", \"Unnecessary use of force\",\n",
     "                \"Assault\", \"Sexual assault\", \"Harm\", \"Excessive force\", \"Injury\"]\n",
     "\n",
     "    for i in keywords:\n",
@@ -194,75 +194,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "f9d1db10-bfef-45d7-abca-24dd401ada85",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<bound method NDFrame.head of      Case Number Date Report Signed       Link Text  \\\n",
-       "2     23-PVI-099          11-Jul-23  Read Full Text   \n",
-       "6     23-OCI-091          10-Jul-23  Read Full Text   \n",
-       "10    23-OCI-083          10-Jul-23  Read Full Text   \n",
-       "13    23-OVI-078          07-Jul-23  Read Full Text   \n",
-       "14    23-OCI-077          07-Jul-23  Read Full Text   \n",
-       "...          ...                ...             ...   \n",
-       "1103  17-OCI-220          20-Jun-18  Read Full Text   \n",
-       "1104  17-TCI-209          09-Apr-18  Read Full Text   \n",
-       "1105  17-OVI-201          27-Jun-18  Read Full Text   \n",
-       "1106  17-OCI-164          08-May-18  Read Full Text   \n",
-       "1107  17-TVI-108          13-Mar-18  Read Full Text   \n",
-       "\n",
-       "                                                   URLs  \n",
-       "2     https://www.siu.on.ca/en/directors_report_deta...  \n",
-       "6     https://www.siu.on.ca/en/directors_report_deta...  \n",
-       "10    https://www.siu.on.ca/en/directors_report_deta...  \n",
-       "13    https://www.siu.on.ca/en/directors_report_deta...  \n",
-       "14    https://www.siu.on.ca/en/directors_report_deta...  \n",
-       "...                                                 ...  \n",
-       "1103  https://www.siu.on.ca/en/directors_report_deta...  \n",
-       "1104  https://www.siu.on.ca/en/directors_report_deta...  \n",
-       "1105  https://www.siu.on.ca/en/directors_report_deta...  \n",
-       "1106  https://www.siu.on.ca/en/directors_report_deta...  \n",
-       "1107  https://www.siu.on.ca/en/directors_report_deta...  \n",
-       "\n",
-       "[697 rows x 4 columns]>"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df.head"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "912ab267-a81e-401f-a31a-bfe67a596611",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "697"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "len(df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "8331f493-60af-481f-809e-ffce2f6feec7",
    "metadata": {},
    "outputs": [],
